style: fix flex horizontal scroll, overflow: hidden

--- a/components/flex/style/index.less
+++ b/components/flex/style/index.less
@@ -5,7 +5,7 @@
 /* flexbox */
 .@{flexPrefixCls} {
   text-align: left;
-  overflow-y: hidden;
+  overflow: hidden;
   display: flex;
   align-items: center;
 
